[project]
name = "amplifier-module-tool-memory"
version = "0.1.0"
description = "Persistent memory tool module for Amplifier - enables AI to remember facts across sessions"
requires-python = ">=3.11"
authors = [
    { name = "MJ" },
]
dependencies = [
    "amplifier-core",
    "pydantic>=2.0",
]

[project.entry-points."amplifier.modules"]
tool-memory = "amplifier_module_tool_memory:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_memory"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
